# gskat

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  ai.c  ai.h  autogen.sh  callback.c  callback.h  config.c  config.h  config.h.in  config.mk  configure  configure.ac  def.h  game.c  game.h  interface.c  interface.h  license.h  main.c  utils.c  utils.h
build-utils/: getversion.sh
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  README.transifex  de.po  gskat.pot
src/: Makefile.am  Makefile.in  ai.c  ai.h  callback.c  callback.h  common.c  common.h  configuration.c  configuration.h  def.h  draw.c  draw.h  game.c  game.h  gamestate.c  gamestate.h  interface.c  interface.h  license.h  main.c  null.c  null.h  utils.c  utils.h
